Create new cafe model for create cafe in swagger document
