# internal/model/cafe.go
@@ -5,7 +5,6 @@ import (
 	"time"
 )
 
-// Cafe represent a cafe in the system
 type Cafe struct {
 	ID             int       `json:"id"`
 	Name           string    `json:"name"`
@@ -27,6 +26,16 @@ type CafeUpdate struct {
 	NearestStation *string    `json:"nearest_station,omitempty"`
 	OpeningTime    *time.Time `json:"opening_time,omitempty"`
 	ClosingTime    *time.Time `json:"closing_time,omitempty"`
+}
+
+type CafeCreate struct {
+	Name           string    `json:"name"`
+	Address        string    `json:"address"`
+	Latitude       float64   `json:"latitude"`
+	Longitude      float64   `json:"longitude"`
+	NearestStation string    `json:"nearest_station"`
+	OpeningTime    time.Time `json:"opening_time"`
+	ClosingTime    time.Time `json:"closing_time"`
 }
 
 func (c Cafe) MarshalJSON() ([]byte, error) {
